# httpdownloader

./: .gitignore  CMakeLists.txt  README.md  build.linux.gcc.debug.sh  build.linux.gcc.release.sh  build.mac.clang.debug.sh  build.mac.clang.release.sh  build.win.gcc.debug.bat
CMake/: common_setting.cmake  projectCompilerSetting.cmake
example/: CMakeLists.txt  Makefile  example.cpp
src/: CMakeLists.txt  http_client.cpp  http_client.h  http_downloader.cpp  http_downloader.h
